--- a/core-java-samples/pom.xml
+++ b/core-java-samples/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>sbank-workshop</artifactId>
+    <artifactId>core-java-samples</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
