--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -4,8 +4,11 @@ server.port=8080
 spring.h2.console.enabled=true
 
 # Show all queries
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+
+#liquebase
+spring.liquibase.change-log=classpath:/db-changelog/master.xml
+logging.level.liquibase = INFO
