add hibernate statistical info log

--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -12,3 +12,7 @@ logging.level.org.hibernate.type=trace
 #liquebase
 spring.liquibase.change-log=classpath:/db-changelog/master.xml
 logging.level.liquibase = INFO
+
+#Turn Statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
