--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
-#liquebase
+#liquibase
 spring.liquibase.change-log=classpath:/db-changelog/master.xml
 logging.level.liquibase = INFO
 
