--- a/springboot-example/pom.xml
+++ b/springboot-example/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.6</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
