--- a/springboot-example/pom.xml
+++ b/springboot-example/pom.xml
@@ -17,6 +17,8 @@
 
     <properties>
         <java.version>11</java.version>
+        <swagger.ui.version>2.9.2</swagger.ui.version>
+        <itext7.core.version>7.1.6</itext7.core.version>
     </properties>
 
     <dependencies>
@@ -57,21 +59,21 @@
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itext7-core</artifactId>
-            <version>7.1.6</version>
+            <version>${itext7.core.version}</version>
             <type>pom</type>
         </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger.ui.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger.ui.version}</version>
             <scope>compile</scope>
         </dependency>
 
