add logging configuration

--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -12,3 +12,11 @@ logging.level.liquibase=INFO
 #Turn Statistics on
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
+
+#logging.file.path=./target/myLoggingFiles
+#logging.level.root=warn
+#logging.level.org.springframework.web=warn
+#logging.level.org.hibernate=warn
+#logging.level.org.hibernate.stat=warn
+#logging.level.org.hibernate.type=warn
+#logging.level.liquibase=warn
