add external jar inpection

--- a/training-examples/inspect-external-jar/pom.xml
+++ b/training-examples/inspect-external-jar/pom.xml
@@ -9,27 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rss-reader</artifactId>
-
+    <artifactId>inspect-external-jar</artifactId>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.rometools</groupId>
-            <artifactId>rome</artifactId>
-            <version>1.8.0</version>
-        </dependency>
-    </dependencies>
 
 </project>
