--- a/training-examples/pom.xml
+++ b/training-examples/pom.xml
@@ -13,6 +13,7 @@
         <module>rss-reader</module>
         <module>news-rss</module>
         <module>inspect-external-jar</module>
+        <module>base-gui</module>
     </modules>
 
 </project>
