add tweet news project

--- a/training-examples/pom.xml
+++ b/training-examples/pom.xml
@@ -14,6 +14,7 @@
         <module>news-rss</module>
         <module>inspect-external-jar</module>
         <module>base-gui</module>
+        <module>tweet-news</module>
     </modules>
 
 </project>
