--- a/training-examples/xml-mapper/pom.xml
+++ b/training-examples/xml-mapper/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xml-mapper</artifactId>
-    
+
     <properties>
         <gson.version>2.8.5</gson.version>
     </properties>
@@ -20,6 +20,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
         </dependency>
     </dependencies>
 
