--- a/training-examples/pom.xml
+++ b/training-examples/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.4.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>org.example</groupId>
     <artifactId>training-examples</artifactId>
     <packaging>pom</packaging>
@@ -16,6 +23,7 @@
         <module>base-gui</module>
         <module>tweet-news</module>
         <module>xml-mapper</module>
+        <module>spring-request-mapping</module>
     </modules>
 
 </project>
