add thymeleaf CRUD example

--- a/training-examples/pom.xml
+++ b/training-examples/pom.xml
@@ -24,6 +24,7 @@
         <module>tweet-news</module>
         <module>xml-mapper</module>
         <module>spring-request-mapping</module>
+        <module>thymeleaf-crud-example</module>
     </modules>
 
 </project>
