add spring  basic authentication example

--- a/training-examples/pom.xml
+++ b/training-examples/pom.xml
@@ -25,6 +25,7 @@
         <module>xml-mapper</module>
         <module>spring-request-mapping</module>
         <module>thymeleaf-crud-example</module>
+        <module>spring-basic-auth-example</module>
     </modules>
 
 </project>
