add image upload BE side

--- a/training-examples/pom.xml
+++ b/training-examples/pom.xml
@@ -26,6 +26,7 @@
         <module>spring-request-mapping</module>
         <module>thymeleaf-crud-example</module>
         <module>spring-basic-auth-example</module>
+        <module>spring-image-upload</module>
     </modules>
 
     <build>
