--- a/training-examples/spring-auth-custom-user-detail-sservice/src/main/resources/application.properties
+++ b/training-examples/spring-auth-custom-user-detail-sservice/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
