add session example with documentation

--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -20,3 +20,7 @@ logging.level.org.hibernate.stat=debug
 #logging.level.org.hibernate.stat=warn
 #logging.level.org.hibernate.type=warn
 #logging.level.liquibase=warn
+
+#Spring session
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
