--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -24,3 +24,5 @@ logging.level.org.hibernate.stat=debug
 #Spring session
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+
+spring.jackson.serialization.fail-on-empty-beans=false
