DO-NOT-MERGE uncompleted commit

--- a/axis2-soap-examples/pom.xml
+++ b/axis2-soap-examples/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>simple-soap-server</module>
+        <module>simple-soap-client</module>
     </modules>
 
 </project>
