add validation example

--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -26,3 +26,4 @@ spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 
 spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jpa.properties.javax.persistence.validation.mode=none
