--- a/springboot-example/src/main/resources/application.properties
+++ b/springboot-example/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.session.jdbc.initialize-schema=always
 
 spring.jackson.serialization.fail-on-empty-beans=false
 #spring.jpa.properties.javax.persistence.validation.mode=none
+
+#enable actuators
+management.endpoints.web.exposure.include=*
