--- a/axis2-soap-examples/simple-soap-client/pom.xml
+++ b/axis2-soap-examples/simple-soap-client/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -96,10 +103,7 @@
                     <!-- using wsdl from an url -->
                     <wsdlUrls>
                         <wsdlUrl>
-                            http://localhost:8080/axis2/services/CalculatorService?wsdl
-                        </wsdlUrl>
-                        <wsdlUrl>
-                            http://localhost:8080/axis2/services/RegionService?wsdl
+                            http://localhost:8080/axis2/services/PersonServiceImpl?wsdl
                         </wsdlUrl>
                     </wsdlUrls>
                     <!-- or using wsdls file directory -->
@@ -114,6 +118,15 @@
                     <packageName>com.organization.name</packageName>
                     <!-- generated source files destination-->
                     <sourceDestDir>target/generatedclasses</sourceDestDir>
+                    <sei/>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
                 </configuration>
             </plugin>
         </plugins>
