--- a/ibatis-examples/pom.xml
+++ b/ibatis-examples/pom.xml
@@ -9,8 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>crud-example</module>
+        <module>ibatis-crud-example</module>
     </modules>
-
 
 </project>
